[package]
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
name = "blog_os"
version = "0.2.0"

[dependencies]
uefi = { git = "https://github.com/GabrielMajeri/uefi-rs", rev = "6bd823af23" }
uefi-logger = { git = "https://github.com/GabrielMajeri/uefi-rs", rev = "6bd823af23" }
log = "0.4.5"
spin = "0.4.6"
volatile = "0.2.3"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
